--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,4 +6,45 @@
 appTitle=Bunge API Hub
 
 #YDES: Application description
-appDescription=
+appDescription=API Hub Bunge
+environment= Environment:
+apps= Applications
+providers= Providers
+provider= Provider
+products = Products
+product = Product
+types= Types
+type= Type
+user= User
+password= Password
+auth= Authentication
+title= Title
+description= Description
+name= Name
+version= Version
+status= Status
+noProduct= No Product
+noApps= No App
+search= Search
+cancel= Cancel
+close= Close
+apiDetails= API Details
+implement= Implement
+implementInPrd= Implement In PRD
+implementApi= Implement API
+createNewApi= Create New API
+createApi= Create API
+providerPath= Provider Path
+customProduct= Custom Product
+createNewApi= Create New API
+proxyname= Proxy Name
+basepath= Base Path
+realApi= Real API
+moreInfo = Other information
+implementApiMessage= You will implement the API in PRD with the following information:
+realApiMessage = The values ​​above reflect the real value, which needs to be versioned.
+errorName= Fill in the Name correctly. Use only letters separated by a dash.
+errorNamePath= Fill in the Base path correctly. Use only letters and slashes, do not start with a slash.
+errorDescription= Fill in the description correctly. Use only letters.
+errorPath= Fill in the provider Path correctly. Use alphanumeric values, bars and dashes.
+errorProduct= Fill in the Product correctly. Use only letters.
