--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -36,11 +36,13 @@ createNewApi= Create New API
 createApi= Create API
 providerPath= Provider Path
 customProduct= Custom Product
-createNewApi= Create New API
 proxyname= Proxy Name
 basepath= Base Path
 realApi= Real API
 moreInfo = Other information
+successMessage= Project requested successfully!
+errorMessage= Error during the request.
+titlePopup= API creation.
 implementApiMessage= You will implement the API in PRD with the following information:
 realApiMessage = The values ​​above reflect the real value, which needs to be versioned.
 errorName= Fill in the Name correctly. Use only letters separated by a dash.
@@ -48,3 +50,4 @@ errorNamePath= Fill in the Base path correctly. Use only letters and slashes, do
 errorDescription= Fill in the description correctly. Use only letters.
 errorPath= Fill in the provider Path correctly. Use alphanumeric values, bars and dashes.
 errorProduct= Fill in the Product correctly. Use only letters.
+errorRegex= Fill in all fields correctly.
