--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -32,7 +32,6 @@ apiDetails= Detalhes da API
 implement= Implementar
 implementInPrd= Implementar em PRD
 implementApi= Implementar API
-createNewApi= Criar Nova API
 createApi= Criar API
 providerPath= Path do Provedor
 customProduct= Produto customizado
@@ -41,6 +40,9 @@ basepath= Base Path
 realApi= API Real
 moreInfo = Outras informações
 createNewApi= Criar Nova API
+successMessage= Projeto solicitado com sucesso!
+errorMessage= Erro durante a solicitação.
+titlePopup= Criação de API.
 implementApiMessage= Você irá implementar a API em PRD com as seguintes informações:
 realApiMessage = Os valores acima refletem o valor real, que precisa ser versionado.
 erroName= Preencha o Nome corretamente. Utilize somente letras separadas por traço
@@ -48,3 +50,4 @@ erroNamePath= Preencha o Base path corretamente. Utilize somente letras e barras
 erroDescription= Preencha a descricao corretamente. Utilize somente letras.
 erroPath= Preencha o Path do provedor corretamente. Utilize valores alphanuméricos, barras e traço.
 erroProduct= Preencha o Produto corretamente. Utilize somente letras.
+errorRegex= Preencha todos os campos corretamente.
