add content to newapi fragment view

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -38,6 +38,8 @@ providerPath= Provider Path
 customProduct= Custom Product
 proxyname= Proxy Name
 basepath= Base Path
+yamlArchive= YAML Archive
+yamlTooltip= Upload your Swagger YAML archive
 realApi= Real API
 moreInfo = Other information
 successMessage= Project requested successfully!
