add content to newapi fragment view

--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -38,6 +38,8 @@ customProduct= Produto customizado
 proxyname= Nome do Proxy
 basepath= Base Path
 realApi= API Real
+yamlArchive= Arquivo YAML
+yamlTooltip= Adicione seu arquivo YAML do Swagger
 moreInfo = Outras informações
 createNewApi= Criar Nova API
 successMessage= Projeto solicitado com sucesso!
