--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -38,7 +38,7 @@ providerPath= Provider Path
 customProduct= Custom Product
 proxyname= Proxy Name
 basepath= Base Path
-yamlArchive= YAML Archive
+yamlArchive= Swagger (YAML File)
 yamlTooltip= Upload your Swagger YAML archive
 realApi= Real API
 moreInfo = Other information
