--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -38,7 +38,7 @@ customProduct= Produto customizado
 proxyname= Nome do Proxy
 basepath= Base Path
 realApi= API Real
-yamlArchive= Arquivo YAML
+yamlArchive= Swagger (Arquivo YAML)
 yamlTooltip= Adicione seu arquivo YAML do Swagger
 moreInfo = Outras informações
 createNewApi= Criar Nova API
