fix missing yaml error

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -53,3 +53,4 @@ errorDescription= Fill in the description correctly. Use only letters.
 errorPath= Fill in the provider Path correctly. Use alphanumeric values, bars and dashes.
 errorProduct= Fill in the Product correctly. Use only letters.
 errorRegex= Fill in all fields correctly.
+errorYamlMissing= Please add a Swagger YAML archive.
