--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -53,3 +53,4 @@ erroDescription= Preencha a descricao corretamente. Utilize somente letras.
 erroPath= Preencha o Path do provedor corretamente. Utilize valores alphanuméricos, barras e traço.
 erroProduct= Preencha o Produto corretamente. Utilize somente letras.
 errorRegex= Preencha todos os campos corretamente.
+errorYamlMissing= Por favor, adicione um arquivo Swagger YAML.
